fix video width on small screen

--- a/css/style.css
+++ b/css/style.css
@@ -807,6 +807,7 @@ a:focus, a:hover {
 .video-section {
   height: 33vw;
   max-height: 350px;
+  min-height: 200px;
   overflow: hidden;
   position: relative;
   background: black;
